--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by Free CSS Templates
+http://www.freecsstemplates.org
+Released for free under a Creative Commons Attribution 2.5 License
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>EMDL Workshop 2020</title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="default.css" rel="stylesheet" type="text/css" />
+<!--<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28186346-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>-->
+</head>
+<body>
+<div id="header">
+	<a href='https://sigmobile.org/mobicom/2020/'><img align="right" vertical-align="text-top" width="35%" style="margin: 00px 5px" src=images/mobicom2020_logo.png></img></a>
+
+	<h1><a href="index.html">4th International Workshop on<BR>Embedded and Mobile Deep Learning</a></h1>
+	<h2>Workshop co-located with <a href="https://sigmobile.org/mobicom/2020/">ACM MobiCom 2020</a></h2>
+	<h3>21st Sept '20 - London, UK</h3>
+
+</div>
+<div id="content">
+	<div id="colOne">
+		<p align="justify">
+			In recent years, breakthroughs from the field of deep learning have transformed how sensor data (e.g., images, audio, and even accelerometers and GPS) can be interpreted to extract the high-level information needed by bleeding-edge sensor-driven systems like smartphone apps and wearable devices. Today, the state-of-the-art in computational models that, for example, recognize a face, track user emotions, or monitor physical activities are increasingly based on deep learning principles and algorithms. Unfortunately, deep models typically exert severe demands on local device resources and this conventionally limits their adoption within mobile and embedded platforms. As a result, in far too many cases existing systems process sensor data with machine learning methods that have been superseded by deep learning years ago.
+
+		</p>
+		<p align="justify">
+			Because the robustness and quality of sensory perception and reasoning is so critical to mobile computing, it is critical for this community to begin the careful study of two core technical questions. First, how should deep learning learning principles and algorithms be applied to sensor inference problems that are central to this class of computing? This includes a combination of applications of learning some of which are familiar to other domains (such as the processing image and audio), in addition to those more uniquely tied to wearable and mobile systems (e.g., activity recognition). Second, what is required for current -- and future -- deep learning innovations to be either simplified or efficiently integrated into a variety of mobile resource-constrained systems? At heart, this MobiCom 2020 co-located workshop aims to consider these two broad themes; more specific topics of interest, include, but are not limited to:
+
+			<ul>
+				<li>Compression of Deep Model Architectures</li>
+				<li>Neural-based Approaches for Modeling User Activities and Behavior</li>
+				<li>Quantized and Low-precision Neural Networks (including Binary Networks)</li>
+				<li>Resource-efficient Federated Learning</li>
+				<li>Mobile Vision supported by Convolutional and Deep Networks</li>
+				<li>Optimizing Commodity Processors (GPUs, DSPs etc.) for Deep Models</li>
+				<li>Audio Analysis and Understanding through Recurrent and Deep Architectures</li>
+				<li>Hardware Accelerators for Deep Neural Networks</li>
+				<li>Distributed Deep Model Training Approaches</li>
+				<li>Applications of Deep Neural Networks with Real-time Requirements</li>
+				<li>Deep Models of Speech and Dialog Interaction or Mobile Devices</li>
+				<li>Partitioned Networks for Improved Cloud- and Processor-Offloading</li>
+				<li>OS Support for Resource Management at Inference-time</li>
+			</ul>
+		</p>
+	</div>
+	<div id="colTwo">
+		<ul>
+			<h2><a href="cfp.pdf">Call for Papers [PDF]</a></h2>
+			<h2><a href="committee.html">Committees</a></h2>
+<h2><a href="keynote.html">Keynote Talks</a></h2>
+<h2><a href="attendee.html">Attendee Information</a></h2>
+<h2><a href="program.html">Technical Program</a></h2>
+	<!--<h2><a href="posters.html">Accepted Posters</a></h2> -->
+			<!--<h2><a href="accepted.html">Accepted Papers</a></h2>-->
+	<h2><a href="history.html">Prior Workshops</a></h2>
+	<h2><a href="submission.html">Submissions</a></h2>
+	
+			<BR>
+			<li>
+
+				<h2>Keynote Speakers</h2>
+				<!--<h3><B><a href='keynote.html'>TBD</a></B><BR></h3>-->
+				<!-- <h3><B>TBD</B><BR></h3> -->
+<table>
+<!--tr valign='top'><td><img height=80 src='images/Carlo.png' /></td>
+<td>
+<a href='https://scholar.google.com/citations?hl=en&user=T6dyV6gAAAAJ&view_op=list_works'>Carlo C. del Mundo</a><BR>Xnor.ai
+</td></tr-->
+<h3>TBA</h3>
+</table>
+
+
+<BR>
+				<h2>Important Dates</h2>
+				<ul>
+					<!-- <li><i>Full Paper Submission Deadline</i><BR>April 12th - 11:59PM AOE</li>
+					<li><i>Full Paper Author Notification</i><BR>April 19th</li>-->
+					<li><i><strong>Paper Submission Deadline</h3></i>:<br>&nbsp;&nbsp;&nbsp;&nbsp;<!--s-->May 15th - 11:59PM AOE<!--/s-->
+					<!--font color="0000FF">&nbsp;&nbsp;&nbsp;&nbsp;April 24th&nbsp; - 11:59PM AOE</font--></li>
+					<li style="line-height: 5px"><br></li>
+					<li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;May 30th</li>
+					<!--<li style="line-height: 5px"><br></li>
+					<li><i><strong>Camera Ready Due</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;May 4th</li>-->
+					<li style="line-height: 5px"><br></li>
+					<li><i><strong>WiP and Demo Deadline</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;May 30th - 11:59PM AOE</li><li style="line-height: 5px"><br></li>
+					<li><i><strong>Workshop Event</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;Monday, 21st Sept 2020</li>
+					
+				</ul>
+			</li>		
+		</ul>
+		<BR>
+		<img width="50%" style="display:block; margin-left: auto; margin-right: auto;" src="images/acm-logo2.png"></img>
+		<BR>
+		<img width="50%" style="display:block; margin-left: auto; margin-right: auto;" src="images/sigmobile.gif"></img>
+	</div>
+	<div style="clear: both;">&nbsp;</div>
+</div>
+<div id="footer">
+	<p><a href="http://www.freecsstemplates.org/"><strong>Free CSS Templates</strong></a></p>
+</div>
+</body>
+</html>
