Updated main text in index.html

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@ Released for free under a Creative Commons Attribution 2.5 License
 <div id="content">
 	<div id="colOne">
 		<p align="justify">
-			In recent years, breakthroughs from the field of deep learning have transformed how sensor data (e.g., images, audio, and even accelerometers and GPS) can be interpreted to extract the high-level information needed by bleeding-edge sensor-driven systems like smartphone apps and wearable devices. Today, the state-of-the-art in computational models that, for example, recognize a face, track user emotions, or monitor physical activities are increasingly based on deep learning principles and algorithms. Unfortunately, deep models typically exert severe demands on local device resources and this conventionally limits their adoption within mobile and embedded platforms. As a result, in far too many cases existing systems process sensor data with machine learning methods that have been superseded by deep learning years ago.
-
+			In recent years, breakthroughs from the field of deep learning have transformed how sensor data (e.g., images, audio, and even accelerometers and GPS) can be interpreted to extract the high-level information needed by bleeding-edge sensor-driven systems like smartphone apps, wearable devices and driverless cars. Today, the state-of-the-art in computational models that, for example, recognize a face, track user emotions, or monitor physical activities are increasingly based on deep learning principles and algorithms. Unfortunately, deep models typically exert severe demands on local device resources and this conventionally limits their adoption within mobile and embedded platforms. As a result, in far too many cases existing systems process sensor data with machine learning methods that have been superseded by deep learning years ago.
 		</p>
 		<p align="justify">
-			Because the robustness and quality of sensory perception and reasoning is so critical to mobile computing, it is critical for this community to begin the careful study of two core technical questions. First, how should deep learning learning principles and algorithms be applied to sensor inference problems that are central to this class of computing? This includes a combination of applications of learning some of which are familiar to other domains (such as the processing image and audio), in addition to those more uniquely tied to wearable and mobile systems (e.g., activity recognition). Second, what is required for current -- and future -- deep learning innovations to be either simplified or efficiently integrated into a variety of mobile resource-constrained systems? At heart, this MobiCom 2020 co-located workshop aims to consider these two broad themes; more specific topics of interest, include, but are not limited to:
+			Because the robustness and quality of sensory perception and reasoning is so critical to mobile computing, it is critical for this community to begin the careful study of two core technical questions. First, how should deep learning learning principles and algorithms be applied to sensor inference problems that are central to this class of computing? This includes a combination of applications of learning, some of which are familiar to other domains (such as image and audio processing), in addition to those more uniquely tied to wearable and mobile systems (<i>e.g.</i> activity recognition and distributed federated learning). Second, what is required for current -- and future -- deep learning innovations to be either simplified or efficiently integrated into a variety of mobile resource-constrained systems? This spans from efficiency-boosting techniques for existing models, up to the design of resouce-efficient deep architectures, and down to novel hardware design for mobile processors for the optimized deployment of deep learning workloads. At heart, this MobiCom 2020 co-located workshop aims to consider these two broad themes; more specific topics of interest, include, but are not limited to:
 
 			<ul>
 				<li>Compression of Deep Model Architectures</li>
@@ -49,14 +48,14 @@ Released for free under a Creative Commons Attribution 2.5 License
 				<li>Quantized and Low-precision Neural Networks (including Binary Networks)</li>
 				<li>Resource-efficient Federated Learning</li>
 				<li>Mobile Vision supported by Convolutional and Deep Networks</li>
-				<li>Optimizing Commodity Processors (GPUs, DSPs etc.) for Deep Models</li>
+				<li>Optimizing Commodity Processors (GPUs, DSPs, etc.) for Deep Models</li>
 				<li>Audio Analysis and Understanding through Recurrent and Deep Architectures</li>
 				<li>Hardware Accelerators for Deep Neural Networks</li>
 				<li>Distributed Deep Model Training Approaches</li>
 				<li>Applications of Deep Neural Networks with Real-time Requirements</li>
 				<li>Deep Models of Speech and Dialog Interaction or Mobile Devices</li>
 				<li>Partitioned Networks for Improved Cloud- and Processor-Offloading</li>
-				<li>OS Support for Resource Management at Inference-time</li>
+				<li>OS Support for Resource Management at Inference Time</li>
 			</ul>
 		</p>
 	</div>
