Updated hotcrp link

--- a/submission.html
+++ b/submission.html
@@ -67,7 +67,7 @@ Please note, you should modify the conference title in the copyright section of 
 		<p align='justify'>
 			<B>Formatting and Submission Site</B><BR>
 			Formatting for all submissions (excluding page length) must adhere to the guidelines here: <a href='https://sigmobile.org/mobicom/2020/'>https://sigmobile.org/mobicom/2020/</a>
-			All submissions must be uploaded to the workshop submission site available here: https://emdl20.hotcrp.com/<!--https://emdl19.hotcrp.com/</a-->
+			All submissions must be uploaded to the workshop submission site available here: <a href="https://emdl20.hotcrp.com/">https://emdl20.hotcrp.com/</a>
 			</p>
 			<p>
 			Any questions regarding submission issues should be directed to Stylianos I. Venieris (s.venieris@samsung.com).
