--- a/committee.html
+++ b/committee.html
@@ -62,6 +62,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 						<a href='https://www.ic.gatech.edu/people/12649/thomas-ploetz'>Thomas Ploetz</a> (Georgia Institute of Technology)<BR>
 
 						<a href='https://mohsaied.github.io/'>Mohamed Abdelfattah</a> (Samsung AI Center-Cambridge)<BR>
+						<a href='https://leontiadis.net/'>Ilias Leontiadis</a> (Samsung AI Center-Cambridge)<BR>
 
 						<!-- <a href='https://scholar.google.com/citations?user=ksq9614AAAAJ&hl=en'>Petko Georgiev</a> (Deep Mind)<BR> -->
 
