--- a/committee.html
+++ b/committee.html
@@ -60,16 +60,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 					
 					<p>
 						<a href='https://www.ic.gatech.edu/people/12649/thomas-ploetz'>Thomas Ploetz</a> (Georgia Institute of Technology)<BR>
-
+						<a href='http://www.cl.cam.ac.uk/~rdm34/'>Robert Mullins</a> (University of Cambridge)<BR>
 						<a href='https://mohsaied.github.io/'>Mohamed Abdelfattah</a> (Samsung AI Center-Cambridge)<BR>
 						<a href='https://leontiadis.net/'>Ilias Leontiadis</a> (Samsung AI Center-Cambridge)<BR>
-
 						<!-- <a href='https://scholar.google.com/citations?user=ksq9614AAAAJ&hl=en'>Petko Georgiev</a> (Deep Mind)<BR> -->
-
 						<!-- <a href='http://www.cs.columbia.edu/~lierranli/'>Erran Li</a> (Uber)<BR> -->
-
-						<!--a href='http://www.cl.cam.ac.uk/~rdm34/'>Robert Mullins</a> (University of Cambridge)<BR-->
-
 						<a href='http://roblkw.com/'>Robert LiKamWa</a> (Arizona State University)<BR>
 						<!--a href='https://scholar.google.co.uk/citations?user=A1QXa5cAAAAJ&hl=en'>Stylianos Venieris</a> (Samsung AI Centre)<BR-->
 
