--- a/committee.html
+++ b/committee.html
@@ -59,13 +59,14 @@ Released for free under a Creative Commons Attribution 2.5 License
 					<h3 class="title">Program Committee</h3>
 					
 					<p>
-						<a href='https://www.ic.gatech.edu/people/12649/thomas-ploetz'>Thomas Ploetz</a> (Georgia Institute of Technology)<BR>
+						<!--a href='https://www.ic.gatech.edu/people/12649/thomas-ploetz'>Thomas Ploetz</a> (Georgia Institute of Technology)<BR-->
 						<a href='http://www.cl.cam.ac.uk/~rdm34/'>Robert Mullins</a> (University of Cambridge)<BR>
 						<a href='https://mohsaied.github.io/'>Mohamed Abdelfattah</a> (Samsung AI Center-Cambridge)<BR>
 						<a href='https://leontiadis.net/'>Ilias Leontiadis</a> (Samsung AI Center-Cambridge)<BR>
+						<a href='https://www.linkedin.com/in/tim-de-bruin-52876257/'>Tim de Bruin</a> (Plumerai)<BR>
 						<!-- <a href='https://scholar.google.com/citations?user=ksq9614AAAAJ&hl=en'>Petko Georgiev</a> (Deep Mind)<BR> -->
 						<!-- <a href='http://www.cs.columbia.edu/~lierranli/'>Erran Li</a> (Uber)<BR> -->
-						<a href='http://roblkw.com/'>Robert LiKamWa</a> (Arizona State University)<BR>
+						<!--a href='http://roblkw.com/'>Robert LiKamWa</a> (Arizona State University)<BR-->
 						<!--a href='https://scholar.google.co.uk/citations?user=A1QXa5cAAAAJ&hl=en'>Stylianos Venieris</a> (Samsung AI Centre)<BR-->
 
 						<!-- <a href='http://www.eecg.toronto.edu/~moshovos/000/doku.php'>Andreas Moshovos</a> (University of Toronto)<BR> -->
@@ -74,10 +75,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 
 						<!--a href='https://croy.web.engr.illinois.edu/'>Romit Roy Choudhury</a> (University of Illinois at Urbana Champaign)<BR-->
 						
-						<a href='https://uk.linkedin.com/in/petko-georgiev-70933832'>Petko Georgiev</a> (DeepMind)<BR>
-						<a href='http://youngkilee.blogspot.sg/p/about-me.html'>Youngki Lee</a> (Seoul National University)<BR>
+						<!--a href='https://uk.linkedin.com/in/petko-georgiev-70933832'>Petko Georgiev</a> (DeepMind)<BR-->
+						<!--a href='http://youngkilee.blogspot.sg/p/about-me.html'>Youngki Lee</a> (Seoul National University)<BR-->
 						<!--a href='https://scholar.google.co.uk/citations?user=HAOtV_AAAAAJ&hl=en'>Ilias Leontiadis</a> (Samsung AI Center-Cambridge)<BR-->
 						<a href='https://stevelaskaridis.github.io/'>Stefanos Laskaridis</a> (Samsung AI Center-Cambridge)<BR>
+
 						<!--a href='https://scholar.google.com/citations?user=3m1zllIAAAAJ&hl=en'>Matt Welsh</a> (Xnor.ai)<BR-->
 
 					</p>
