Added Nic to steering committee.

--- a/committee.html
+++ b/committee.html
@@ -39,6 +39,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 
 <h3 class="title">Steering Committee</h3>
 <p>
+	<a href='http://niclane.org/'>Nic Lane</a> (Samsung AI Center-Cambridge, University of Oxford)<BR>
 	<a href='https://research.google.com/pubs/PeteWarden.html'>Pete Warden</a> (Google Brain)<BR>
 </p>
 
