--- a/committee.html
+++ b/committee.html
@@ -63,8 +63,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 						<!--a href='https://www.ic.gatech.edu/people/12649/thomas-ploetz'>Thomas Ploetz</a> (Georgia Institute of Technology)<BR-->
 						<a href='http://www.cl.cam.ac.uk/~rdm34/'>Robert Mullins</a> (University of Cambridge)<BR>
 						<a href='https://mohsaied.github.io/'>Mohamed Abdelfattah</a> (Samsung AI Center-Cambridge)<BR>
+						<a href='https://kangwooklee.com/'>Kangwook Lee</a> (University of Wisconsin-Madison)<BR>
 						<a href='https://leontiadis.net/'>Ilias Leontiadis</a> (Samsung AI Center-Cambridge)<BR>
+						<a href='https://www.ds3lab.com/members/ce-zhang/'>Ce Zhang</a> (ETH Zurich)<BR>
 						<a href='https://www.linkedin.com/in/tim-de-bruin-52876257/'>Tim de Bruin</a> (Plumerai)<BR>
+						<a href='https://www.linkedin.com/in/june-yuan-shangguan-8b281228'>Yuan (June) Shangguan</a> (Google)<BR>
 						<!-- <a href='https://scholar.google.com/citations?user=ksq9614AAAAJ&hl=en'>Petko Georgiev</a> (Deep Mind)<BR> -->
 						<!-- <a href='http://www.cs.columbia.edu/~lierranli/'>Erran Li</a> (Uber)<BR> -->
 						<!--a href='http://roblkw.com/'>Robert LiKamWa</a> (Arizona State University)<BR-->
