--- a/committee.html
+++ b/committee.html
@@ -67,7 +67,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 						<a href='https://leontiadis.net/'>Ilias Leontiadis</a> (Samsung AI Center-Cambridge)<BR>
 						<a href='http://papail.io/'>Dimitris Papailiopoulos</a> (University of Wisconsin-Madison)<BR>
 						<a href='https://www.microsoft.com/en-us/research/people/matthaip/'>Matthai Philipose</a> (Microsoft Research)<BR>
-						<a href='https://v-chandra.github.io/'>Vikas Chandra</a> (Facebook)<BR>
+						<a href='https://v-chandra.github.io/about/'>Vikas Chandra</a> (Facebook)<BR>
 						<a href='https://www.linkedin.com/in/paul-whatmough-2062729'>Paul Whatmough</a> (ARM Research, Harvard University)<BR>
 						<a href='https://www.egr.msu.edu/~mizhang/'>Mi Zhang</a> (Michigan State University)<BR>
 						<a href='https://www.ds3lab.com/members/ce-zhang/'>Ce Zhang</a> (ETH Zurich)<BR>
