--- a/keynote.html
+++ b/keynote.html
@@ -44,8 +44,9 @@ Released for free under a Creative Commons Attribution 2.5 License
 <!-- DBW We are lucky to have three incredible keynotes at the workshop -- provided by Andreas Moshovos (University of Toronto), Pete Warden (Google Brain), and Laurens van der Maaten (Facebook AI Research) -- which will cover a rich spectrum of the embedded and mobile deep learning space.  </p>
 DBW-->
 <p>
-<!-- <b>Emerging Techniques for Constrained-Resource Deep Learning</b> --><!--img  valign="top" align="right" height=150 src='images/Carlo.png'></img><BR>
-<a name="warden" href='https://scholar.google.com/citations?hl=en&user=T6dyV6gAAAAJ&view_op=list_works'>Carlo C. del Mundo</a><BR>Xnor.ai
+<!-- <b>Emerging Techniques for Constrained-Resource Deep Learning</b> -->
+<!--img  valign="top" align="right" height=150 src='images/dr_bouganis.jpg'></img><BR>
+<a name="bouganis" href='https://www.imperial.ac.uk/intelligent-digital-systems/group-members/'>Christos Bouganis</a><BR>Intelligent Digital Systems Lab (iDSL), Imperial College London
 
 <BR><BR>
 
@@ -72,8 +73,19 @@ In the past few years, convolutional neural networks (CNN) have revolutionized s
 			<li>
 
 				<h2>Keynote Speakers</h2>
-				<!--<h3><B><a href='keynote.html'>TBD</a></B><BR></h3>-->
-				<!-- <h3><B>TBD</B><BR></h3> -->
+				<table>
+					<tr valign='top'>
+							<td><img height=80 src='images/dr_bouganis.jpg' /></td>
+					<td>
+						<a href='https://www.imperial.ac.uk/intelligent-digital-systems/group-members/'>Christos Bouganis</a><BR>Imperial College London</td>
+					</tr>
+					<tr valign='top'>
+						<td><img height=80 width=58 src='images/koen_helwegen.jpg' /></td>
+						<td>
+						<a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai Research
+						</td>
+					</tr>
+				</table>
 <table>
 <!--tr valign='top'><td><img height=80 src='images/Carlo.png' /></td>
 <td>
@@ -87,8 +99,8 @@ In the past few years, convolutional neural networks (CNN) have revolutionized s
 				<ul>
 					<!-- <li><i>Full Paper Submission Deadline</i><BR>April 12th - 11:59PM AOE</li>
 					<li><i>Full Paper Author Notification</i><BR>April 19th</li>-->
-					<li><i><strong>Paper Submission Deadline</h3></i>:<br>&nbsp;&nbsp;&nbsp;&nbsp;<!--s-->May 15th - 11:59PM AOE<!--/s-->
-					<!--font color="0000FF">&nbsp;&nbsp;&nbsp;&nbsp;April 24th&nbsp; - 11:59PM AOE</font--></li>
+					<li><i><strong>Paper Submission Deadline</h3></i>:<br>&nbsp;&nbsp;&nbsp;&nbsp;<s>May 15th - 11:59PM AOE</s>
+					<font color="0000FF">&nbsp;&nbsp;&nbsp;&nbsp;June 5th&nbsp; - 11:59PM AOE</font></li>
 					<li style="line-height: 5px"><br></li>
 					<li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;May 30th</li>
 					<!--<li style="line-height: 5px"><br></li>
