--- a/submission.html
+++ b/submission.html
@@ -133,8 +133,19 @@ Please note, you should modify the conference title in the copyright section of 
 			<li>
 
 				<h2>Keynote Speakers</h2>
-				<!--<h3><B><a href='keynote.html'>TBD</a></B><BR></h3>-->
-				<!-- <h3><B>TBD</B><BR></h3> -->
+				<table>
+					<tr valign='top'>
+							<td><img height=80 src='images/dr_bouganis.jpg' /></td>
+					<td>
+						<a href='https://www.imperial.ac.uk/intelligent-digital-systems/group-members/'>Christos Bouganis</a><BR>Imperial College London</td>
+					</tr>
+					<tr valign='top'>
+						<td><img height=80 width=58 src='images/koen_helwegen.jpg' /></td>
+						<td>
+						<a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai Research
+						</td>
+					</tr>
+				</table>
 <table>
 <!--tr valign='top'><td><img height=80 src='images/Carlo.png' /></td>
 <td>
@@ -149,8 +160,8 @@ Please note, you should modify the conference title in the copyright section of 
 				<ul>
 					<!-- <li><i>Full Paper Submission Deadline</i><BR>April 12th - 11:59PM AOE</li>
 					<li><i>Full Paper Author Notification</i><BR>April 19th</li>-->
-					<li><i><strong>Paper Submission Deadline</h3></i>:<br>&nbsp;&nbsp;&nbsp;&nbsp;<!--s-->May 15th - 11:59PM AOE<!--/s-->
-					<!--font color="0000FF">&nbsp;&nbsp;&nbsp;&nbsp;April 24th&nbsp; - 11:59PM AOE</font--></li>
+					<li><i><strong>Paper Submission Deadline</h3></i>:<br>&nbsp;&nbsp;&nbsp;&nbsp;<s>May 15th - 11:59PM AOE</s>
+					<font color="0000FF">&nbsp;&nbsp;&nbsp;&nbsp;June 5th&nbsp; - 11:59PM AOE</font></li>
 					<li style="line-height: 5px"><br></li>
 					<li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;May 30th</li>
 					<!--<li style="line-height: 5px"><br></li>
