Updated the author notifcation date.

--- a/program.html
+++ b/program.html
@@ -532,7 +532,8 @@ QualityDeepSense: Quality-Aware Deep Learning Framework for Internet of Things A
 					<li><i><strong>Paper Submission Deadline</h3></i>:<br>&nbsp;&nbsp;&nbsp;&nbsp;<s>May 15th - 11:59PM AOE</s>
 					<font color="0000FF">&nbsp;&nbsp;&nbsp;&nbsp;June 5th&nbsp; - 11:59PM AOE</font></li>
 					<li style="line-height: 5px"><br></li>
-					<li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;May 30th</li>
+					<!--li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;June 20th</li-->
+					<li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;June 29th</li>
 					<!--<li style="line-height: 5px"><br></li>
 					<li><i><strong>Camera Ready Due</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;May 4th</li>-->
 					<li style="line-height: 5px"><br></li>
