--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@ Released for free under a Creative Commons Attribution 2.5 License
 					<li style="line-height: 5px"><br></li>
 					<!--font color="0000FF">&nbsp;&nbsp;&nbsp;&nbsp;April 24th&nbsp; - 11:59PM AOE</font--></li>
 					<li style="line-height: 5px"><br></li>
-					<li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;June 20th</li>
+					<!--li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;June 20th</li-->
+					<li><i><strong>Author Notification</strong></i>: <BR>&nbsp;&nbsp;&nbsp;&nbsp;June 29th</li>
 					<!--<li style="line-height: 5px"><br></li>
 					<li><i><strong>Camera Ready Due</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;May 4th</li>-->
 					<li style="line-height: 5px"><br></li>
