Updared the technical programme.

--- a/program.html
+++ b/program.html
@@ -147,20 +147,65 @@ Still to be announced.
 DBW -->
 
 <h3 class="title">Technical Program</h3> 
-<h4>TBA</h4>
+<!--h4>TBA</h4-->
 <!--p>
 <b>08:45 - 09:00 Workshop Welcome</b>
-</p>
+</p-->
 
 <p>
-<b>09:00 - 10:00 Keynote 1</b>
-</p>
-
-<p>
-<b>10:00 - 10:30 Session 1</b>
+<b>Keynote 1</b>
 </p>
 
 <table>
+<tr valign='top'>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><img height=105 src='images/dr_bouganis.jpg' /></td>
+<td>
+<div style="font-size: small;">
+<!--b><a href='keynote.html#bouganis'>Overcoming the Challenges of Distributed Learning</a></b-->
+<BR><BR>
+<a href='https://www.imperial.ac.uk/intelligent-digital-systems/'>Christos Bouganis</a></b>
+<BR>
+<i>Imperial College London</i>
+</div>
+</td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+</tr>
+</table> 
+
+<!--p>
+<b>10:00 - 10:30 Session 1</b>
+</p-->
+<p>
+<b>Session 1</b>
+
+<table>
+<tr valign='top'>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td>
+<div style="font-size: small;">
+<b>Hybrid Fusion Learning: A Hierarchical Learning Model For Distributed Systems
+</b>&nbsp;<BR>Anirudh Kasturi, Anish Reddy Ellore, Paresh Saxena, Chittaranjan Hota (<i>BITS Pilani</i>)</div> 
+</td>
+</tr>
+</table>
+
+<BR>
+<table>
+<tr valign='top'>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td>
+<div style="font-size: small;">
+<b>Split Computing for Complex Object Detectors: Challenges and Preliminary Results
+</b>&nbsp;<BR>Yoshitomo Matsubara, Marco Levorato
+ (<i>University of California, Irvine</i>)</div> 
+</td>
+</tr>
+</table>
+
+<BR>
+
+<!--table>
 <tr valign='top'>
 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>
@@ -182,10 +227,61 @@ DBW -->
 </tr>
 </table>
 
-<p><b>10:30 - 11:00 Coffee Break</b></p>
-<p><b>11:00 - 11:45 Session 2</b></p>
+<p><b>10:30 - 11:00 Coffee Break</b></p-->
+
+<p>
+<b>Keynote 2</b>
+</p>
 
 <table>
+<tr valign='top'>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><img height=105 src='images/koen_helwegen.jpg' /></td>
+<td>
+<div style="font-size: small;">
+<!--b><a href='keynote.html#bouganis'>Overcoming the Challenges of Distributed Learning</a></b-->
+<BR><BR>
+<a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a></b>
+<BR>
+<i>Plumerai Research</i>
+</div>
+</td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+</tr>
+</table>
+
+<p><b>Session 2</b></p>
+
+<table>
+<tr valign='top'>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td>
+<div style="font-size: small;">
+<b>Classifying WLAN Packets from the RF Envelope: Towards More Efficient Wireless Network Performance
+</b>&nbsp;<BR>Zerina Kapetanovic, Gregory E. Moore, Shanti Garman, Joshua R. Smith (<i>University of Washington</i>)</div> 
+</td>
+</tr>
+</table>
+
+<BR>
+<table>
+<tr valign='top'>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td>
+<div style="font-size: small;">
+<b>Amplitude Suppression and Direction Activation in Networks
+for 1-bit Faster R-CNN
+</b>&nbsp;<BR>
+Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i>Beihang University</i>)</div> 
+</td>
+</tr>
+</table>
+
+<BR>
+
+<h4>More TBA</h4>
+
+<!--table>
 <tr valign='top'>
 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>
