Added Dr. Bouganis keynote title and abstract.

--- a/keynote.html
+++ b/keynote.html
@@ -40,18 +40,18 @@ Released for free under a Creative Commons Attribution 2.5 License
 					</h3>
 
 	<p>
-<!-- 	Three exciting keynotes are confirmed to be given by Pete Warden (Google Brain), Paul Whatmough (ARM and Harvard) and Dimitris Papailiopoulos (University of Wisconsin-Madison) -- which will cover a rich spectrum of the embedded and mobile deep learning space. -->
+ 	Two exciting keynotes are confirmed to be given by Christos Bouganis (Imperial College London) and Koen Helwegen (Plumerai) with more to come. <!-- which will cover a rich spectrum of the embedded and mobile deep learning space.-->
 <!-- DBW We are lucky to have three incredible keynotes at the workshop -- provided by Andreas Moshovos (University of Toronto), Pete Warden (Google Brain), and Laurens van der Maaten (Facebook AI Research) -- which will cover a rich spectrum of the embedded and mobile deep learning space.  </p>
 DBW-->
 <p>
-<!-- <b>Emerging Techniques for Constrained-Resource Deep Learning</b> -->
-<!--img  valign="top" align="right" height=150 src='images/dr_bouganis.jpg'></img><BR>
+<b>Deep Neural Networks in the Embedded Space: Opportunities and Challenges</b>
+<img  valign="top" align="right" height=150 src='images/dr_bouganis.jpg' style="float: right; padding-left: 10px; padding-bottom: 2px;"></img><BR>
 <a name="bouganis" href='https://www.imperial.ac.uk/intelligent-digital-systems/group-members/'>Christos Bouganis</a><BR>Intelligent Digital Systems Lab (iDSL), Imperial College London
 
 <BR><BR>
+<p align="justify">
+The talk will discuss the challenging problem of designing Deep Neural Network systems that achieve high performance under low power envelopes, enabling their deployment in the embedded space. We will specifically focus on the opportunities that are provided when customisation of the design is possible, through the use of reconfigurable computing, with emphasis on recent efforts in automating the design of such systems.
 
-In the past few years, convolutional neural networks (CNN) have revolutionized several application domains in AI and computer vision. The biggest challenge with state-of-the-art CNNs is the massive compute demands that prevent these models from being used in many embedded systems and other resource-constrained environments. In this talk, I will explain and contrast several recent techniques that enable CNN models with high accuracy to consume very little memory and processor resources. These methods include a variety of algorithmic and optimization approaches to deep learning models. Quantization, sparsification, and compact model design are three of the major techniques for efficient CNNs which will be discussed in the context of computer vision applications including detection, recognition, and segmentation. I will also talk about our experiences at Xnor.ai to bring these technologies to the Edge AI market.
---->
 <h4>TBA</h4>
 </p>
 <BR>
