--- a/program.html
+++ b/program.html
@@ -162,7 +162,7 @@ DBW -->
 <td><img height=105 src='images/dr_bouganis.jpg' /></td>
 <td>
 <div style="font-size: small;">
-<!--b><a href='keynote.html#bouganis'>Overcoming the Challenges of Distributed Learning</a></b-->
+<b><a href='keynote.html#bouganis'>Deep Neural Networks in the Embedded Space: Opportunities and Challenges</a></b>
 <BR><BR>
 <a href='https://www.imperial.ac.uk/intelligent-digital-systems/'>Christos Bouganis</a></b>
 <BR>
