Added link to registration page.

--- a/attendee.html
+++ b/attendee.html
@@ -41,7 +41,8 @@ Released for free under a Creative Commons Attribution 2.5 License
 		For travel, registration and visa information please consult the MobiSys conference resources, specifically:
 <ul>
 <li>[general information] <a href='https://sigmobile.org/mobicom/2020/venue.php'>https://sigmobile.org/mobicom/2020/venue</a></li> 
-<li>[visa information] <!--a href='https://www.sigmobile.org/mobisys/2019/visa/'>https://www.sigmobile.org/mobisys/2019/visa/</a-->TBD</li> 
+<li>[registration] <a href='https://sigmobile.org/mobicom/2020/registration.php'>https://sigmobile.org/mobicom/2020/registration</a></li> 
+<!--li>[visa information] <a href='https://www.sigmobile.org/mobisys/2019/visa/'>https://www.sigmobile.org/mobisys/2019/visa/</a>TBD</li--> 
 
 <!--<li>[registration information] <a href='https://www.sigmobile.org/mobisys/2018/reg/'>https://www.sigmobile.org/mobisys/2018/reg/</a></li>
 <li>[hotel email contact] email: mobisys2018-hotel@acm.org</li>-->
