Updated Koen's keynote title and abstract.

--- a/program.html
+++ b/program.html
@@ -239,7 +239,7 @@ DBW -->
 <td><img height=105 src='images/koen_helwegen.jpg' /></td>
 <td>
 <div style="font-size: small;">
-<!--b><a href='keynote.html#bouganis'>Overcoming the Challenges of Distributed Learning</a></b-->
+<b><a href='keynote.html#koen'>Taking Efficient Deep Learning to the Extreme with Binarized Neural Networks</a></b>
 <BR><BR>
 <a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a></b>
 <BR>
