--- a/keynote.html
+++ b/keynote.html
@@ -51,6 +51,24 @@ DBW-->
 <BR><BR>
 <p align="justify">
 The talk will discuss the challenging problem of designing Deep Neural Network systems that achieve high performance under low power envelopes, enabling their deployment in the embedded space. We will specifically focus on the opportunities that are provided when customisation of the design is possible, through the use of reconfigurable computing, with emphasis on recent efforts in automating the design of such systems.
+</p>
+<p>
+<b>Taking Efficient Deep Learning to the Extreme with Binarized Neural Networks</b>
+<img  valign="top" align="right" height=150 src='images/koen_helwegen.jpg' style="float: right; padding-left: 10px; padding-bottom: 2px;"></img><BR>
+<a name="koen" href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai
+
+<BR><BR>
+<p align="justify">
+Binarized Neural Networks (BNNs) are deep learning models in which weights and activations are encoded not using 32, 16 or 8 bits, but using only 1 bit. These models promise much lower memory requirements as well as extremely efficient execution, as expensive convolutions can be reduced to simple xnor and popcount instructions. They may revolutionize the field of deep learning on the edge.
+</p>
+
+<p align="justify">
+However, several fundamental and practical obstacles have limited the use of BNNs in real-world applications. Existing gradient descent-based optimization algorithms cannot be applied directly to BNNs due to their discrete nature. Support on existing hardware platforms is limited. Popular frameworks such as TensorFlow and TensorFlow Lite do not support implementation, training and deployment of BNNs.
+</p>
+
+<p align="justify">
+In this talk, we discuss the integrated approach that is needed to tackle these issues. We explore research by Plumerai and others that is pushing the capacity to design and train BNNs, including the binary optimizer Bop and recent progress in the application of knowledge distillation to BNNs. We present the Larq Ecosystem, a family of open-source libraries we developed to facilitate development and deployment of BNNs. We have arrived at an exciting time where It is possible to grab a pretrained, state-of-the-art BNN, finetune it for the task at hand and deploy it for inference on several popular hardware platforms, including Armv8-a.
+</p>
 
 <h4>TBA</h4>
 </p>
