Added the panel discussion to the programme.

--- a/program.html
+++ b/program.html
@@ -279,7 +279,31 @@ Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i
 
 <BR>
 
-<h4>More TBA</h4>
+<p>
+<b>Keynote 3 - TBA</b>
+</p>
+
+<BR>
+
+<p>
+<b>Panel Discussion Themes</b>
+</p>
+
+<table>
+<tr valign='top'>
+<td>
+<ul>
+<div style="font-size: small;">
+<li><b>Cross-stack Deployability Challenges for Federated Learning
+</b>&nbsp;</li></div>
+<div style="font-size: small;">
+<li><b>The Interplay between DNN and Processor Design
+</b>&nbsp;</li><BR></div> 
+</td>
+</tr>
+</table>
+
+<!--h4>More TBA</h4-->
 
 <!--table>
 <tr valign='top'>
