--- a/committee.html
+++ b/committee.html
@@ -31,7 +31,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 
 	<h1><a href="index.html">4th International Workshop on<BR>Embedded and Mobile Deep Learning</a></h1>
 	<h2>Workshop co-located with <a href="https://sigmobile.org/mobicom/2020/">ACM MobiCom 2020</a></h2>
-	<h3>21st Sept '20 - London, UK</h3>
+	<h3>25th Sept '20 - London, UK</h3>
 
 </div>
 <div id="content">
