Added 3rd keynote speaker and schedule.

--- a/committee.html
+++ b/committee.html
@@ -145,6 +145,12 @@ Released for free under a Creative Commons Attribution 2.5 License
 						<a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai Research
 						</td>
 					</tr>
+					<tr valign='top'>
+						<td><img height=70 width=58 src='images/adria_gascon.jpg' /></td>
+						<td>
+						<a href='https://www.lsi.upc.edu/~agascon/'>Adri&agrave Gasc&oacuten</a><BR>Google
+						</td>
+					</tr>
 				</table>
 <table>
 <!--tr valign='top'><td><img height=80 src='images/Carlo.png' /></td>
