--- a/keynote.html
+++ b/keynote.html
@@ -55,7 +55,7 @@ The talk will discuss the challenging problem of designing Deep Neural Network s
 <p>
 <b>Taking Efficient Deep Learning to the Extreme with Binarized Neural Networks</b>
 <img  valign="top" align="right" height=150 src='images/koen_helwegen.jpg' style="float: right; padding-left: 10px; padding-bottom: 2px;"></img><BR>
-<a name="koen" href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai
+<a name="koen" href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai Research
 
 <BR><BR>
 <p align="justify">
@@ -70,7 +70,13 @@ However, several fundamental and practical obstacles have limited the use of BNN
 In this talk, we discuss the integrated approach that is needed to tackle these issues. We explore research by Plumerai and others that is pushing the capacity to design and train BNNs, including the binary optimizer Bop and recent progress in the application of knowledge distillation to BNNs. We present the Larq Ecosystem, a family of open-source libraries we developed to facilitate development and deployment of BNNs. We have arrived at an exciting time where It is possible to grab a pretrained, state-of-the-art BNN, finetune it for the task at hand and deploy it for inference on several popular hardware platforms, including Armv8-a.
 </p>
 
-<h4>TBA</h4>
+<p>
+<b>TBA</b>
+<img  valign="top" align="right" height=150 src='images/adria_gascon.jpg' style="float: right; padding-left: 10px; padding-bottom: 2px;"></img><BR>
+<a name="gascon" href='https://www.lsi.upc.edu/~agascon/'>Adri&agrave Gasc&oacuten</a><BR>Google
+
+<BR><BR>
+<h4 name="gascon">TBA</h4>
 </p>
 <BR>
 
@@ -101,6 +107,12 @@ In this talk, we discuss the integrated approach that is needed to tackle these 
 						<td><img height=80 width=58 src='images/koen_helwegen.jpg' /></td>
 						<td>
 						<a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai Research
+						</td>
+					</tr>
+					<tr valign='top'>
+						<td><img height=70 width=58 src='images/adria_gascon.jpg' /></td>
+						<td>
+						<a href='https://www.lsi.upc.edu/~agascon/'>Adri&agrave Gasc&oacuten</a><BR>Google
 						</td>
 					</tr>
 				</table>
