--- a/program.html
+++ b/program.html
@@ -146,14 +146,14 @@ Still to be announced.
 
 DBW -->
 
-<h3 class="title">Technical Program</h3> 
+<h3 class="title">Technical Program (BST time zone)</h3> 
 <!--h4>TBA</h4-->
-<!--p>
-<b>08:45 - 09:00 Workshop Welcome</b>
-</p-->
+<p>
+<b>13:50 - 14:00 Workshop Welcome</b>
+</p>
 
 <p>
-<b>Keynote 1</b>
+<b>14:00 - 14:45 Keynote 1</b>
 </p>
 
 <table>
@@ -177,7 +177,7 @@ DBW -->
 <b>10:00 - 10:30 Session 1</b>
 </p-->
 <p>
-<b>Session 1</b>
+<b>14:45 - 15:30 Session 1</b>
 
 <table>
 <tr valign='top'>
@@ -230,7 +230,7 @@ DBW -->
 <p><b>10:30 - 11:00 Coffee Break</b></p-->
 
 <p>
-<b>Keynote 2</b>
+<b>15.30 - 16.15 Keynote 2</b>
 </p>
 
 <table>
@@ -250,7 +250,7 @@ DBW -->
 </tr>
 </table>
 
-<p><b>Session 2</b></p>
+<p><b>16.15 - 17.00 Session 2</b></p>
 
 <table>
 <tr valign='top'>
@@ -280,28 +280,51 @@ Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i
 <BR>
 
 <p>
-<b>Keynote 3 - TBA</b>
+<b>17.00 - 17.45 Keynote 3</b>
 </p>
+
+<table>
+<tr valign='top'>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><img height=105 src='images/adria_gascon.jpg' /></td>
+<td>
+<div style="font-size: small;">
+<b><a href='keynote.html#gascon'>TBA</a></b>
+<BR><BR>
+<a href='https://www.lsi.upc.edu/~agascon/'>Adri&agrave Gasc&oacuten</a></b>
+<BR>
+<i>Google</i>
+</div>
+</td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+</tr>
+</table> 
 
 <BR>
 
 <p>
-<b>Panel Discussion Themes</b>
+<b>17.45 - 18.30 Panel Discussion</b>
 </p>
 
 <table>
 <tr valign='top'>
 <td>
+<p><b>&nbsp;&nbsp;&nbsp;&nbsp;Themes:</b></p>
 <ul>
 <div style="font-size: small;">
 <li><b>Cross-stack Deployability Challenges for Federated Learning
 </b>&nbsp;</li></div>
 <div style="font-size: small;">
 <li><b>The Interplay between DNN and Processor Design
-</b>&nbsp;</li><BR></div> 
+</b>&nbsp;</li></div> 
 </td>
 </tr>
 </table>
+
+
+<p>
+<b>18.30 - 19.15 TensorFlow Federated (TFF) Tutorial</b>
+</p>
 
 <!--h4>More TBA</h4-->
 
@@ -633,6 +656,12 @@ QualityDeepSense: Quality-Aware Deep Learning Framework for Internet of Things A
 						<a href='https://scholar.google.co.uk/citations?user=obCgauwAAAAJ&hl=en'>Koen Helwegen</a><BR>Plumerai Research
 						</td>
 					</tr>
+          <tr valign='top'>
+            <td><img height=70 width=58 src='images/adria_gascon.jpg' /></td>
+            <td>
+            <a href='https://www.lsi.upc.edu/~agascon/'>Adri&agrave Gasc&oacuten</a><BR>Google
+            </td>
+          </tr>
 				</table>
 
 <table>
