Updated workshop date on the right column.

--- a/history.html
+++ b/history.html
@@ -196,7 +196,7 @@ DBW-->
 					<li><i><strong>Camera Ready Due</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;May 4th</li>-->
 					<li style="line-height: 5px"><br></li>
 					<li><i><strong>WiP and Demo Deadline</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;May 30th - 11:59PM AOE</li><li style="line-height: 5px"><br></li>
-					<li><i><strong>Workshop Event</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;Monday, 21st Sept 2020</li>
+					<li><i><strong>Workshop Event</strong></i>:<BR>&nbsp;&nbsp;&nbsp;&nbsp;Monday, 25th Sept 2020</li>
 					
 				</ul>
 			</li>		
