Added list of panelists.

--- a/program.html
+++ b/program.html
@@ -319,6 +319,14 @@ Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i
 </b>&nbsp;</li></div> 
 </td>
 </tr>
+<tr valign='top'>
+<td>
+<p><b>&nbsp;&nbsp;&nbsp;&nbsp;Panelists:</b></p>
+<ul>
+<div style="font-size: small;">
+<li>Christos Bouganis (Imperial College London), Koen Helwegen (Plumerai), Aruna Balasubramanian (Stony Brook University), Poonam Yadav (University of York, UK) &nbsp;</li></div>
+</td>
+</tr>
 </table>
 
 
