--- a/program.html
+++ b/program.html
@@ -289,7 +289,7 @@ Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i
 <td><img height=105 src='images/adria_gascon.jpg' /></td>
 <td>
 <div style="font-size: small;">
-<b><a href='keynote.html#gascon'>TBA</a></b>
+<b><a href='keynote.html#gascon'>Secure Aggregation for Federated Learning and Analytics</a></b>
 <BR><BR>
 <a href='https://www.lsi.upc.edu/~agascon/'>Adri&agrave Gasc&oacuten</a></b>
 <BR>
