--- a/committee.html
+++ b/committee.html
@@ -39,7 +39,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 
 <h3 class="title">Steering Committee</h3>
 <p>
-	<a href='http://niclane.org/'>Nic Lane</a> (Samsung AI Center-Cambridge, University of Oxford)<BR>
+	<a href='http://niclane.org/'>Nic Lane</a> (Samsung AI Center-Cambridge, University of Cambridge)<BR>
 	<a href='https://research.google.com/pubs/PeteWarden.html'>Pete Warden</a> (Google Brain)<BR>
 </p>
 
@@ -49,7 +49,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 <!--<b>Workshop co-Organizers</b><BR>-->
 							<a href='https://steliosven10.github.io/'>Stylianos I. Venieris</a> (Samsung AI Center-Cambridge)<BR>
 
-							<a href='http://niclane.org/'>Nic Lane</a> (Samsung AI Center-Cambridge, University of Oxford)<BR>
+							<a href='http://niclane.org/'>Nic Lane</a> (Samsung AI Center-Cambridge, University of Cambridge)<BR>
 
 							<a href='http://www.winlab.rutgers.edu/~gruteser/'>Marco Gruteser</a> (Google, Rutgers University)<BR>
 							
