--- a/program.html
+++ b/program.html
@@ -149,11 +149,15 @@ DBW -->
 <h3 class="title">Technical Program (BST time zone)</h3> 
 <!--h4>TBA</h4-->
 <p>
-<b>13:50 - 14:00 Workshop Welcome</b>
+<b>13:50 - 14:00 Welcome and Opening Remarks</b> 
+<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Stylianos I. Venieris (Samsung AI)
 </p>
 
 <p>
 <b>14:00 - 14:45 Keynote 1</b>
+<BR>
+Session Chair: Nic Lane (Samsung AI, University of Cambridge)
 </p>
 
 <table>
@@ -231,6 +235,8 @@ DBW -->
 
 <p>
 <b>15.30 - 16.15 Keynote 2</b>
+<BR>
+Session Chair: Marco Gruteser (Google, Rutgers University)
 </p>
 
 <table>
@@ -281,6 +287,8 @@ Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i
 
 <p>
 <b>17.00 - 17.45 Keynote 3</b>
+<BR>
+Session Chair: Stylianos I. Venieris (Samsung AI)
 </p>
 
 <table>
@@ -304,6 +312,8 @@ Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i
 
 <p>
 <b>17.45 - 18.30 Panel Discussion</b>
+<BR>
+Chair: Stylianos I. Venieris (Samsung AI)
 </p>
 
 <table>
