Added links to videos.

--- a/program.html
+++ b/program.html
@@ -188,8 +188,11 @@ Session Chair: Nic Lane (Samsung AI, University of Cambridge)
 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>
 <div style="font-size: small;">
-<b>Hybrid Fusion Learning: A Hierarchical Learning Model For Distributed Systems
-</b>&nbsp;<BR>Anirudh Kasturi, Anish Reddy Ellore, Paresh Saxena, Chittaranjan Hota (<i>BITS Pilani</i>)</div> 
+<b><a href="https://dl.acm.org/doi/10.1145/3410338.3412339">Hybrid Fusion Learning: A Hierarchical Learning Model For Distributed Systems
+</a></b>&nbsp;<BR>Anirudh Kasturi, Anish Reddy Ellore, Paresh Saxena, Chittaranjan Hota (<i>BITS Pilani</i>)
+<BR>
+<a href="videos/[2020]_emdl_hybrid_fusion_learning.mov">Full presentation</a>
+</div> 
 </td>
 </tr>
 </table>
@@ -200,9 +203,12 @@ Session Chair: Nic Lane (Samsung AI, University of Cambridge)
 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>
 <div style="font-size: small;">
-<b>Split Computing for Complex Object Detectors: Challenges and Preliminary Results
-</b>&nbsp;<BR>Yoshitomo Matsubara, Marco Levorato
- (<i>University of California, Irvine</i>)</div> 
+<b><a href="https://dl.acm.org/doi/10.1145/3410338.3412338">Split Computing for Complex Object Detectors: Challenges and Preliminary Results
+</b></a>&nbsp;<BR>Yoshitomo Matsubara, Marco Levorato
+ (<i>University of California, Irvine</i>)
+<BR>
+<a href="videos/[2020]_emdl_split_computing_for_complex_object_detectors.mp4">Full presentation</a>
+</div> 
 </td>
 </tr>
 </table>
@@ -263,8 +269,11 @@ Session Chair: Marco Gruteser (Google, Rutgers University)
 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>
 <div style="font-size: small;">
-<b>Classifying WLAN Packets from the RF Envelope: Towards More Efficient Wireless Network Performance
-</b>&nbsp;<BR>Zerina Kapetanovic, Gregory E. Moore, Shanti Garman, Joshua R. Smith (<i>University of Washington</i>)</div> 
+<b><a href="https://dl.acm.org/doi/10.1145/3410338.3412337">Classifying WLAN Packets from the RF Envelope: Towards More Efficient Wireless Network Performance
+</a></b>&nbsp;<BR>Zerina Kapetanovic, Gregory E. Moore, Shanti Garman, Joshua R. Smith (<i>University of Washington</i>)
+<BR>
+<a href="videos/[2020]_emdl_classifying_wlan_packets_from_the_rf_envelope.mp4">Full presentation</a>
+</div> 
 </td>
 </tr>
 </table>
@@ -275,10 +284,13 @@ Session Chair: Marco Gruteser (Google, Rutgers University)
 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>
 <div style="font-size: small;">
-<b>Amplitude Suppression and Direction Activation in Networks
+<b><a href="https://dl.acm.org/doi/10.1145/3410338.3412340">Amplitude Suppression and Direction Activation in Networks
 for 1-bit Faster R-CNN
-</b>&nbsp;<BR>
-Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i>Beihang University</i>)</div> 
+</a></b>&nbsp;<BR>
+Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i>Beihang University</i>)
+<BR>
+<a href="videos/[2020]_emdl_amplitude_suppression_and_direct_activation_in_networks_for_1bit_frcnn.mov">Full presentation</a>
+</div> 
 </td>
 </tr>
 </table>
