Added ASFRCNN mp4 video.

--- a/program.html
+++ b/program.html
@@ -191,7 +191,7 @@ Session Chair: Nic Lane (Samsung AI, University of Cambridge)
 <b><a href="https://dl.acm.org/doi/10.1145/3410338.3412339">Hybrid Fusion Learning: A Hierarchical Learning Model For Distributed Systems
 </a></b>&nbsp;<BR>Anirudh Kasturi, Anish Reddy Ellore, Paresh Saxena, Chittaranjan Hota (<i>BITS Pilani</i>)
 <BR>
-<a href="videos/[2020]_emdl_hybrid_fusion_learning.mov">Full presentation</a>
+<a href="videos/[2020]_emdl_hybrid_fusion_learning.mp4">Full presentation</a>
 </div> 
 </td>
 </tr>
@@ -289,7 +289,7 @@ for 1-bit Faster R-CNN
 </a></b>&nbsp;<BR>
 Sheng Xu, Zhendong Liu, Xuan Gong, Chunlei Liu, Mingyuan Mao, Baochang Zhang (<i>Beihang University</i>)
 <BR>
-<a href="videos/[2020]_emdl_amplitude_suppression_and_direct_activation_in_networks_for_1bit_frcnn.mov">Full presentation</a>
+<a href="videos/[2020]_emdl_amplitude_suppression_and_direct_activation_in_networks_for_1bit_frcnn.mp4">Full presentation</a>
 </div> 
 </td>
 </tr>
